# changelogger

./: '  .CHANGELOG.md.links.jinja2  .CHANGELOG.md.overview.jinja2  .changelogger.yml  .cl.overview.jinja2  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .version_upgrade_config.yml  CHANGELOG.md  README.md  bat  config.schema.json  other.txt  pyproject.toml  requirements.txt
.changelogger/: pyproject.toml.jinja2
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: user-story.md
.github/ISSUE_TEMPLATE/workflows/: continuous_integration.yml
.github/workflows/: continuous_deployment.yml  continuous_integration.yml  dependabot_automerge.yml  pypi_release.yml
assets/: .changelogger.yml  .cl.links.jinja2  .cl.overview.jinja2  .version_upgrade_config.yml
changelogger/: __main__.py  changelog.py  exceptions.py  main.py  settings.py  templating.py  utils.py
changelogger/app/: __init__.py  prompts.py
changelogger/app/_commands/: init.py
changelogger/app/commands/: add.py  check.py  force.py  init.py  notes.py  precommit.py  upgrade.py  versions.py
changelogger/app/manage/: __init__.py
changelogger/app/manage/_commands/: content.py  notes.py  versions.py
changelogger/app/manage/commands/: check.py  content.py  upgrade.py  versions.py
changelogger/app/unreleased/: __init__.py
changelogger/app/unreleased/_commands/: add.py
changelogger/app/unreleased/commands/: add.py  content.py
changelogger/apps/manage/: __init__.py  check.py  content.py  upgrade.py
changelogger/apps/manage/commands/: content.py  upgrade.py
changelogger/assets/: .cl.overview.jinja2  changelog.jinja2
changelogger/commands/: changelogger.py  consts.py  domain_models.py  exceptions.py
changelogger/conf/: _defaults.py  defaults.py  git.py  models.py  settings.py
changelogger/manage/: __init__.py  content.py  upgrade.py  utils.py
changelogger/management/: changelog.py  context.py
changelogger/models/: config.py  domain_models.py
changelogger/old_commands/: changelogger.py  consts.py  main.py
changelogger/templates/: .cl.overview.jinja2  .cl.overview_inner.jinja2  changelog.jinja2  links.jinja2  overview.jinja2  release_notes.md.jinja2  versioned_file.txt.jinja2
docs/: CONTRIBUTING.md  README.md
strar/: main.py
strar/commands/: cmd.py  domain_models.py  exceptions.py
tests/: test_changelog.py  test_templating.py  test_utils.py
tests/app/: test_prompts.py
tests/app/_commands/: test_init.py
tests/app/commands/: test_add.py  test_check.py  test_init.py  test_notes.py  test_precommit.py  test_upgrade.py  test_versions.py
tests/app/manage/_commands/: test_check.py  test_upgrade.py  test_versions.py
tests/app/manage/commands/: test_check.py  test_content.py  test_upgrade.py  test_versions.py
tests/app/unreleased/commands/: test_add.py  test_content.py
tests/app/ureleased/commands/: test_content.py
